pulsar/k8s/ingress-route-proxy.yml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proxy
  namespace: pulsar
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-proxy
  routes:
    - match: Host(`pulsar.env0.luojm.com`) 
      kind: Rule
      services:
      - name: pulsar-proxy
        kind: Service
        namespace: pulsar
        port: 8080
