pulsar/k8s/ingress-route-pulsar-manager.yml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: manager 
  namespace: pulsar
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-manager
  routes:
    - match: Host(`console.pulsar.env0.luojm.com`) 
      kind: Rule
      services:
      - name: pulsar-pulsar-manager
        kind: Service
        namespace: pulsar
        port: 9527
